k8s-service/go-web/go-web.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web
  namespace: go-web
  labels:
    app: go-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web
  template:
    metadata:
      labels:
        app: go-web
    spec:
      containers:
        - name: go-web
          image: registry.cn-hangzhou.aliyuncs.com/lvhj/go_app:v2
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: go-web
  namespace: go-web
  labels:
    app: go-web
spec:
  selector:
    app: go-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
#      nodePort: 30083
#  type: NodePort
  type: LoadBalancer
#  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  namespace: go-web
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: ""  # 替换为你想要的域名或使用空字符串""以支持无主机名 www.lvhj.top
      http:
        paths:
          - path: /lvhj
            pathType: Prefix
            backend:
              service:
                name: go-web
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: go-web
                port:
                  number: 80
